Adding more close buttons to overlays

--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -25,7 +25,7 @@
 }
 
 .voting-title {
-  color: #5a5a5aff;
+  color: #83110a;
   font-size: 24px;
   margin-bottom: 20px;
   margin-top: 0;
@@ -71,7 +71,7 @@
 }
 
 .voting-vote-prompt {
-  color: #2596be;
+  color: #83110a;
   font-size: 16px;
   margin-bottom: 20px;
 }
