Role Overlay looks much better

--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -424,3 +424,19 @@
   margin-bottom: 15px;
 }
 
+ul.team-mates {
+  margin: 0;
+}
+
+ul.team-mates li {
+  font-size: 16px;
+}
+
+ul.team-mates li.fascist {
+  color: #83110a;
+}
+
+ul.team-mates li.hitler {
+  color: #000000;
+}
+
