--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -9,6 +9,24 @@
   font-style: normal;
 }
 
+/* Lobby Styles */
+
+.container.lobby {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8e693b;
+}
+
+.lobby .card {
+  background-color: #FBB969;
+  border-radius: 8px;
+  padding: 40px;
+  max-width: 500px;
+  width: 100%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
 .header {
   text-align: center;
   margin-bottom: 20px;
@@ -22,6 +40,60 @@ h1.title {
   display: inline-block;
   padding: 6px 12px;
   border-radius: 12px;
+}
+
+.lobby .subtitle {
+  color: #ccc;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+  
+.lobby .section {
+    margin-bottom: 25px;
+}
+
+.lobby input {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #444;
+  background-color: #ffffff;
+  color: #2a4e6c;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.lobby .subtitle {
+  color: #83110a;
+}
+
+.lobby button {
+  padding: 15px;
+  width: 100%;
+  font-size: 14px;
+  border: 0px;
+  border-radius: 4px;
+  background-color: #cb6849;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.2s;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+.lobby .divider {
+  text-align: center;
+  margin-top: 20px;
+  color: #2a4e6c;
+}
+
+.lobby .error {
+  background-color: #d32f2f;
+  color: #fff;
+  padding: 12px;
+  border-radius: 4px;
+  margin-bottom: 20px;
 }
 
 /* Shared Overlay Styles */
