--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -770,9 +770,8 @@ ul.team-mates li.hitler {
 .toast-title {
   color: #83110a;
   font-size: 24px;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 10px;
-  margin-top: 0;
   text-align: center;
 }
 
@@ -792,14 +791,14 @@ ul.team-mates li.hitler {
 @keyframes slideInFromRight {
   from {
     transform: translateX(100%);
-    opacity: 0;
+    /*opacity: 0;*/
   }
   to {
     transform: translateX(0);
-    opacity: 1;
+    /*opacity: 1;*/
   }
 }
 
 .toast.slide-in {
-  animation: slideInFromRight 0.4s ease-out forwards;
+  animation: slideInFromRight 0.5s ease-out forwards;
 }
