--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -1,12 +1,16 @@
 /* Overall Styles */
 
+html, body, #root {
+  height: 100%;
+}
+
 .container {
   min-height: 100vh;
   background-color: #FBB969;
-  padding: 20px;
   font-family: "Germania One", system-ui;
   font-weight: 400;
   font-style: normal;
+  height: 100%;
 }
 
 /* GameBoard Styles */
@@ -20,17 +24,7 @@
 .players-section {
   width: 100%;
   max-width: 1400px;
-  margin: 130px auto 20px;
-  padding: 0 10px;
-}
-
-.main-content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  max-width: 1400px;
-  margin: 0 auto 100px;
-  padding: 0 10px;
+  margin: 0 auto;
 }
 
 .phase-box {
@@ -69,12 +63,16 @@
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-/* PlayerList Component Styles */
-
-.player-list-container {
-  padding: 0px;
-  margin-bottom: 20px;
+.game-board {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  overflow-y: scroll;
+  padding: 135px 20px 110px;
+  height: 100%;
 }
+
+/* PlayerList Component Styles */
 
 .player-grid {
   display: flex;
@@ -86,14 +84,13 @@
 
 .player-grid .player-item {
   color: #fff;
-  padding: 12px;
+  padding: 9px;
   background-color: #cb6849;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
   gap: 8px;
   flex: 1 1 calc(20% - 10px);
-  min-width: 90px;
   max-width: calc(20% - 10px);
   position: relative;
 }
@@ -583,7 +580,7 @@ h1.title {
 
 /* PolicyTracks Component Styles */
 
-.policy-board {
+.policy-track {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -592,21 +589,23 @@ h1.title {
   align-items: center;
   justify-content: center;
   position: relative;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-.policy-board.liberal {
+.policy-track.liberal {
   background-image: url("/assets/images/liberal-board.png");
 }
 
-.policy-board.fascist-5-to-6 {
+.policy-track.fascist-5-to-6 {
   background-image: url("/assets/images/fascist-board-5-to-6-players.png");
 }
 
-.policy-board.fascist-7-to-8 {
+.policy-track.fascist-7-to-8 {
   background-image: url("/assets/images/fascist-board-7-to-8-players.png");
 }
 
-.policy-board.fascist-9-to-10 {
+.policy-track.fascist-9-to-10 {
   background-image: url("/assets/images/fascist-board-9-to-10-players.png");
 }
 
