--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -170,6 +170,7 @@ html, body, #root {
 .game-description {
   text-align: center;
   color: #83110a;
+  margin: 30px 0;
 }
 
 .game-description a {
